enhanced log file name realted logic